# GiocoSbaffiPacetti

./: NOTE.txt  README.md  classifica.txt  pyproject.toml
.zed/: settings.json
src/giocosbaffipacetti/: __init__.py  classifica.txt  scores.txt
